# weasel-rs

./: Cargo.toml  LICENCE  README.md
src/: lib.rs  main.rs
